<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/register"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FCF9FF"
    tools:context=".Register1Activity">

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="367dp"
        android:layout_height="18dp"
        android:layout_marginTop="28dp"
        android:max="110"
        android:paddingTop="3dp"
        android:paddingBottom="3dp"
        android:progress="10"
        android:progressDrawable="@drawable/rounded_corners_progressbar"
        android:progressTint="#A084DC"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="367dp"
        android:layout_height="444dp"
        android:layout_marginBottom="92dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/progressBar"
        app:layout_constraintVertical_bias="0.966">

        <CheckBox
            android:id="@+id/checkBox"
            style="@style/CustomCheckbox02"
            android:layout_width="match_parent"
            android:layout_height="59dp"
            android:paddingLeft="11dp"
            android:text="@string/reg_4"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.088"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="VisualLintButtonSize"
            tools:layout_editor_absoluteY="152dp"

            />

        <CheckBox
            android:id="@+id/checkBox1"
            android:layout_width="match_parent"
            android:layout_height="59dp"
            android:text="@string/reg_5"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.088"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="VisualLintButtonSize"
            tools:layout_editor_absoluteY="152dp"
            style="@style/CustomCheckbox02"
            android:paddingLeft="11dp"/>

        <CheckBox
            android:id="@+id/checkBox2"
            android:layout_width="match_parent"
            android:layout_height="59dp"
            android:text="@string/reg_6"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.088"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="152dp"
            style="@style/CustomCheckbox02"
            android:paddingLeft="11dp"/>

        <CheckBox
            android:id="@+id/checkBox3"
            android:layout_width="match_parent"
            android:layout_height="59dp"
            android:text="@string/reg_7"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.088"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="152dp"
            style="@style/CustomCheckbox02"
            android:paddingLeft="11dp"/>

        <CheckBox
            android:id="@+id/checkBox4"
            android:layout_width="match_parent"
            android:layout_height="59dp"
            android:text="@string/reg_8"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.088"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="152dp"
            style="@style/CustomCheckbox02"
            android:paddingLeft="11dp"/>

        <CheckBox
            android:id="@+id/checkBox5"
            android:layout_width="match_parent"
            android:layout_height="59dp"
            android:text="@string/reg_9"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.088"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="152dp"
            style="@style/CustomCheckbox02"
            android:paddingLeft="11dp"/>

        <CheckBox
            android:id="@+id/checkBox6"
            android:layout_width="match_parent"
            android:layout_height="59dp"
            android:text="@string/reg_10"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.088"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="152dp"
            style="@style/CustomCheckbox02"
            android:paddingLeft="11dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="367dp"
        android:layout_height="118dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/progressBar"
        app:layout_constraintVertical_bias="0.419">

        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/reg_2"
            android:textSize="24sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.236"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView6" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/reg_1"
            android:textSize="24sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.076"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/progressBar" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/reg_3"
            android:textColor="@color/black"
            android:textSize="8sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.104"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView7"
            tools:ignore="SmallSp" />
    </LinearLayout>

    <Button
        android:id="@+id/button"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="36dp"
        android:background="@drawable/button_with_border_back"
        android:text="Back"
        android:textColor="@color/med_purple"
        android:padding="10dp"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.098"
        app:layout_constraintStart_toStartOf="parent"
        android:textAllCaps="false"
        />

    <Button
        android:id="@+id/button2"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="36dp"
        android:text="Next"
        android:background="@drawable/radius50_button"
        android:textColor="@color/purple_white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.905"
        app:layout_constraintStart_toStartOf="parent"
        android:textAllCaps="false"
        />

</androidx.constraintlayout.widget.ConstraintLayout>